--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "lodash": "^4.17.4",
+    "mongoose": "^4.13.6",
     "mtgsdk": "^0.3.0",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
@@ -12,7 +13,9 @@
     "react-materialize": "^1.0.15",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.11"
+    "react-scripts": "1.0.11",
+    "express-session": "^1.15.6",
+    "connect-mongo": "2.0.0"
   },
   "scripts": {
     "start-js": "react-scripts start",
@@ -22,5 +25,9 @@
     "eject": "react-scripts eject",
     "build-css": "node-sass-chokidar src/ -o public/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o public/ --watch --recursive"
+  },
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "concurrently": "^3.5.1"
   }
 }
